@@ -25,6 +25,7 @@
     * Add Net::SSLeay::Callback::PemPasswd class.
     * Add Net::SSLeay::SSL_CTX#set_psk_client_callback method.
     * Add Net::SSLeay::SSL_CTX#set_psk_server_callback method.
+    * Add Net::SSLeay::EVP_CIPHER_CTX class.
     
 0.013 2024-11-14
   [New Features]
